syntax = "proto3";

// Định nghĩa tên gói cho tệp được tạo ra
package com.skygate.service.auth;

/**
 * Định nghĩa tất cả các phương thức RPC cho dịch vụ.
 * Các hàm được định nghĩa theo định dạng sau:
 * rpc <tên_hàm>(<tin_nhắn_yêu_cầu>) returns (<tin_nhắn_phản_hồi>) {}
 */
service AuthMerchant {
  /**
   * HealthCheck là một phương thức RPC đơn lẻ kiểm tra trạng thái sức khỏe của dịch vụ
   * cổng.
   * @param Empty - Một tin nhắn yêu cầu trống.
   * @return HealthCheckResponse - Tin nhắn phản hồi chứa trạng thái sức khỏe của dịch vụ
   * cổng.
   */
  rpc createMerchant(CreateMerchantRequest) returns (AuthMerchantResponse) {}
  rpc deleteMerchantByCode(GetAndDeleteMerchantRequest) returns (AuthMerchantResponse) {}
  rpc getMerchantByUsername(GetMerchantByUsernameRequest) returns (AuthMerchantResponse) {}
  rpc getMerchantByCode(GetAndDeleteMerchantRequest) returns (AuthMerchantResponse) {}
  rpc validateAccessToken(ValidateAccessTokenRequest) returns (AuthMerchantResponse) {}
}

/**
 * Bắt đầu định nghĩa các tin nhắn phản hồi.
 * Các tin nhắn phản hồi được định nghĩa theo định dạng sau:
 * message <tên_tin_nhắn_phản_hồi> {
 */
message CreateMerchantRequest {
  string username       = 1;
  string password       = 2;
  optional string email = 3;
  optional string phone = 4;
  string code           = 5;
}

message GetAndDeleteMerchantRequest {
  string code = 1;
}

message GetMerchantByUsernameRequest {
  string username = 1;
}

message ValidateAccessTokenRequest {
  string accessToken = 1;
}

message AuthMerchantResponse {
  string username             = 1;
  string email                = 2;
  string phone                = 3;
  repeated string roles = 4;
  string status               = 5;
  string password             = 6;
  string code                 = 7;
}