syntax = "proto3";

// Định nghĩa tên gói cho tệp được tạo ra
package com.skygate.service.auth;

/**
 * Định nghĩa tất cả các phương thức RPC cho dịch vụ.
 * Các hàm được định nghĩa theo định dạng sau:
 * rpc <tên_hàm>(<tin_nhắn_yêu_cầu>) returns (<tin_nhắn_phản_hồi>) {}
 */
service MerchantRole {
  /**
   * HealthCheck là một phương thức RPC đơn lẻ kiểm tra trạng thái sức khỏe của dịch vụ
   * cổng.
   * @param Empty - Một tin nhắn yêu cầu trống.
   * @return HealthCheckResponse - Tin nhắn phản hồi chứa trạng thái sức khỏe của dịch vụ
   * cổng.
   */
  rpc getMerchantRoleByIds(GetRolesRequest) returns (GetRolesResponse) {}
  rpc getMerchantRoleById(GetRoleRequest) returns (GetRoleResponse) {}
}

/**
 * Bắt đầu định nghĩa các tin nhắn phản hồi.
 * Các tin nhắn phản hồi được định nghĩa theo định dạng sau:
 * message <tên_tin_nhắn_phản_hồi> {
 */
message GetRolesRequest {
  repeated string ids = 1;
}

message GetRoleRequest {
  string id = 1;
}

message GetRoleResponse {
  string _id                  = 1;
  string name                 = 2;
  string description          = 3;
  repeated string permissions = 4;
  bool isActive               = 5;
}

message GetRolesResponse {
  repeated GetRoleResponse roles = 1;
}